force-app/main/default/objects/Quote/fields/AprobadoPorOfertista__c.field-meta.xml
<CustomField>
    <fullName>AprobadoPorOfertista__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si el ofertista esta de acuerdo con la cotizacion, puede dar su aprobación de ello. Luego los valores de cotización no podrán modificarse.</inlineHelpText>
    <label>Aprobado por Ofertista</label>
    <type>Checkbox</type>
</CustomField>