force-app/main/default/objects/Quote/fields/AprobadorDescuento__c.field-meta.xml
<CustomField>
    <fullName>AprobadorDescuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador Descuento</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>10 - Supervisor Servicios</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>Administrador</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Administrador Salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones1</relationshipName>
    <type>Lookup</type>
</CustomField>