force-app/main/default/objects/Quote/fields/AprobarDescuento__c.field-meta.xml
<CustomField>
    <fullName>AprobarDescuento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobar Descuento</label>
    <type>Checkbox</type>
</CustomField>