force-app/main/default/objects/Quote/fields/CantidadBOM__c.field-meta.xml
<CustomField>
    <fullName>CantidadBOM__c</fullName>
    <description>Cantidad BOM</description>
    <inlineHelpText>Cantidad BOM</inlineHelpText>
    <label>Cantidad</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>