force-app/main/default/objects/Quote/fields/Carpeta__c.field-meta.xml
<CustomField>
    <fullName>Carpeta__c</fullName>
    <formula>CreatedBy.Carpeta__c</formula>
    <label>Carpeta</label>
    <type>Text</type>
</CustomField>