force-app/main/default/objects/Quote/fields/ClienteId__c.field-meta.xml
<CustomField>
    <fullName>ClienteId__c</fullName>
    <formula>Opportunity.AccountId</formula>
    <label>ID Cliente</label>
    <type>Text</type>
</CustomField>