force-app/main/default/objects/Quote/fields/CodigoProyecto__c.field-meta.xml
<CustomField>
    <fullName>CodigoProyecto__c</fullName>
    <label>Código de proyecto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>