force-app/main/default/objects/Quote/fields/CodigoUN__c.field-meta.xml
<CustomField>
    <fullName>CodigoUN__c</fullName>
    <formula>Opportunity.Owner.CodigoUN__c</formula>
    <label>Código UN</label>
    <type>Text</type>
</CustomField>