force-app/main/default/objects/Quote/fields/CondicionPago__c.field-meta.xml
<CustomField>
    <fullName>CondicionPago__c</fullName>
    <label>Condición de Pago</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 días Precio Contado</fullName>
            </value>
            <value>
                <fullName>60 Días sin Intereses</fullName>
            </value>
            <value>
                <fullName>90 Días sin Intereses</fullName>
            </value>
            <value>
                <fullName>Anticipo, Cheques 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo, Cheques 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo, Cheques 30 y 45 días</fullName>
            </value>
            <value>
                <fullName>Anticipo, Cheques 30 y 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo, saldo 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 20% saldo 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 20% saldo 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 20% saldo 30 y 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 20% saldo 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 30% saldo 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 30% saldo 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40%, Cheques 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40%, Cheques 30 y 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40% saldo 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40% saldo 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40% saldo 30 y 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40% saldo 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 40% saldo contra entrega</fullName>
            </value>
            <value>
                <fullName>Anticipo 50%, Cheques 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 50% saldo 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 50% saldo 60 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 50% saldo contra entrega</fullName>
            </value>
            <value>
                <fullName>Anticipo 60% saldo 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 70%, Cheques 30, 60 y 90 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 70%, Cheques 30 días</fullName>
            </value>
            <value>
                <fullName>Anticipo 70%, Cheques 30 y 60 días</fullName>
            </value>
            <value>
                <fullName>Cheque adjunto 30, 60 y 90 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>