force-app/main/default/objects/Quote/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <formula>Contact.Contacto__c</formula>
    <label>Contacto</label>
    <type>Text</type>
</CustomField>