force-app/main/default/objects/Quote/fields/DescripcionBOM__c.field-meta.xml
<CustomField>
    <fullName>DescripcionBOM__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>