force-app/main/default/objects/Quote/fields/DescuentoGlobal__c.field-meta.xml
<CustomField>
    <fullName>DescuentoGlobal__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Descuento aplicado al Subtotal</inlineHelpText>
    <label>Descuento %</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>