force-app/main/default/objects/Quote/fields/DescuentoTotal__c.field-meta.xml
<CustomField>
    <fullName>DescuentoTotal__c</fullName>
    <formula>IF(Subtotal&gt;TotalPrecio__c, Subtotal-TotalPrecio__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Descuento Total</inlineHelpText>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>