force-app/main/default/objects/Quote/fields/DescuentoTotalP__c.field-meta.xml
<CustomField>
    <fullName>DescuentoTotalP__c</fullName>
    <formula>IF(Subtotal&gt;TotalPrecio__c, 
(Subtotal-TotalPrecio__c)/Subtotal, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Descuento aplicado al Subtotal</inlineHelpText>
    <label>Descuento %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>