force-app/main/default/objects/Quote/fields/DescuentoVendedorP__c.field-meta.xml
<CustomField>
    <fullName>DescuentoVendedorP__c</fullName>
    <description>Descuento vendedor %</description>
    <formula>if (TotalPrecioLista__c &gt; Subtotal , (TotalPrecioLista__c - Subtotal)/TotalPrecioLista__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Descuento calculado de los Ítems</inlineHelpText>
    <label>Descuento Items</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>