force-app/main/default/objects/Quote/fields/DirDespacho__c.field-meta.xml
<CustomField>
    <fullName>DirDespacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección de Despacho</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Direccion__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Despacho</value>
        </filterItems>
        <filterItems>
            <field>$Source.Cliente__c</field>
            <operation>equals</operation>
            <valueField>Direccion__c.AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Direccion__c</referenceTo>
    <relationshipLabel>Cotizaciones (Dirección de Envío)</relationshipLabel>
    <relationshipName>Envio</relationshipName>
    <type>Lookup</type>
</CustomField>