force-app/main/default/objects/Quote/fields/DirDespachoT__c.field-meta.xml
<CustomField>
    <fullName>DirDespachoT__c</fullName>
    <formula>DirDespacho__r.Street__c +&quot; &quot;+ DirDespacho__r.StreetNo__c +&quot;, &quot;+ DirDespacho__r.Comuna__c +&quot;, &quot;+  DirDespacho__r.Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Despacho</label>
    <type>Text</type>
</CustomField>