force-app/main/default/objects/Quote/fields/DirFacturacionT__c.field-meta.xml
<CustomField>
    <fullName>DirFacturacionT__c</fullName>
    <formula>DirFacturacion__r.Street__c +&quot; &quot;+ DirFacturacion__r.StreetNo__c +&quot;, &quot;+ DirFacturacion__r.Comuna__c +&quot;, &quot;+  DirFacturacion__r.Ciudad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facturación</label>
    <type>Text</type>
</CustomField>