force-app/main/default/objects/Quote/fields/DocEntry__c.field-meta.xml
<CustomField>
    <fullName>DocEntry__c</fullName>
    <inlineHelpText>Numero único para realizar seguimiento de todo el proceso logístico</inlineHelpText>
    <label>N° Draft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>