force-app/main/default/objects/Quote/fields/Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo__c</fullName>
    <description>Etiqueta para PDF de Cotización</description>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <label>Ejecutivo</label>
    <type>Text</type>
</CustomField>