force-app/main/default/objects/Quote/fields/Estado_en_SAP__c.field-meta.xml
<CustomField>
    <fullName>Estado_en_SAP__c</fullName>
    <defaultValue>&quot;No Ingresado&quot;</defaultValue>
    <label>Estado en SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Ingresado</fullName>
                <default>true</default>
                <label>No Ingresado</label>
            </value>
            <value>
                <fullName>Documento Pendiente</fullName>
            </value>
            <value>
                <fullName>Documento Autorizado</fullName>
            </value>
            <value>
                <fullName>Documento Rechazado</fullName>
            </value>
            <value>
                <fullName>Documento Cancelado</fullName>
            </value>
            <value>
                <fullName>Orden de Venta Creada</fullName>
            </value>
            <value>
                <fullName>Orden de Venta Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>