force-app/main/default/objects/Quote/fields/EstadoOportunidad__c.field-meta.xml
<CustomField>
    <fullName>EstadoOportunidad__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <label>Estado Oportunidad</label>
    <type>Text</type>
</CustomField>