force-app/main/default/objects/Quote/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <label>Factura</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>