force-app/main/default/objects/Quote/fields/Fecha_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cierre__c</fullName>
    <description>Fecha cierre por vencimiento o rechazo de la quote</description>
    <label>Fecha cierre</label>
    <type>DateTime</type>
</CustomField>