force-app/main/default/objects/Quote/fields/Fecha_Hora_OV_creada_en_SAP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_OV_creada_en_SAP__c</fullName>
    <label>Fecha/Hora OV creada en SAP</label>
    <type>DateTime</type>
</CustomField>