force-app/main/default/objects/Quote/fields/FechaCaducidad__c.field-meta.xml
<CustomField>
    <fullName>FechaCaducidad__c</fullName>
    <formula>ExpirationDate</formula>
    <label>Válidez de la Oferta</label>
    <type>Date</type>
</CustomField>