force-app/main/default/objects/Quote/fields/FechaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FechaEntrega__c</fullName>
    <inlineHelpText>Le fecha de entrega es requerida por SAP</inlineHelpText>
    <label>Fecha de entrega</label>
    <type>Date</type>
</CustomField>