force-app/main/default/objects/Quote/fields/FechaEntregaBOM__c.field-meta.xml
<CustomField>
    <fullName>FechaEntregaBOM__c</fullName>
    <description>Fecha entrega BOM</description>
    <inlineHelpText>Fecha entrega BOM</inlineHelpText>
    <label>Fecha Entrega</label>
    <type>Date</type>
</CustomField>