force-app/main/default/objects/Quote/fields/FechaProduccion__c.field-meta.xml
<CustomField>
    <fullName>FechaProduccion__c</fullName>
    <label>Fecha de Producción</label>
    <type>Date</type>
</CustomField>