force-app/main/default/objects/Quote/fields/Glosa__c.field-meta.xml
<CustomField>
    <fullName>Glosa__c</fullName>
    <label>Glosa</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>