force-app/main/default/objects/Quote/fields/Indicaciones__c.field-meta.xml
<CustomField>
    <fullName>Indicaciones__c</fullName>
    <description>Indicaciones relacionadas a la cotización</description>
    <inlineHelpText>Indicaciones relacionadas a la cotización</inlineHelpText>
    <label>Indicaciones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>