force-app/main/default/objects/Quote/fields/IndicacionesLogisticas__c.field-meta.xml
<CustomField>
    <fullName>IndicacionesLogisticas__c</fullName>
    <label>Indicaciones Logísticas</label>
    <type>TextArea</type>
</CustomField>