force-app/main/default/objects/Quote/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <formula>0.19 * TotalPrecio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA 19%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>