force-app/main/default/objects/Quote/fields/MontoDescuento__c.field-meta.xml
<CustomField>
    <fullName>MontoDescuento__c</fullName>
    <formula>Subtotal -  TotalPrecio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>