force-app/main/default/objects/Quote/fields/NOrdenCompra__c.field-meta.xml
<CustomField>
    <fullName>NOrdenCompra__c</fullName>
    <description>Número de orden de compra del cliente</description>
    <inlineHelpText>Número de orden de compra del cliente</inlineHelpText>
    <label>N° Orden de Compra</label>
    <length>20</length>
    <type>Text</type>
</CustomField>