force-app/main/default/objects/Quote/fields/NOrdenVenta__c.field-meta.xml
<CustomField>
    <fullName>NOrdenVenta__c</fullName>
    <formula>TEXT(OVDocNum__c)</formula>
    <label>N° Orden de Venta</label>
    <type>Text</type>
</CustomField>