force-app/main/default/objects/Quote/fields/Ofertista__c.field-meta.xml
<CustomField>
    <fullName>Ofertista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ofertista</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&quot;60 - Ofertista&quot;</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&quot;60 - Jefe Ofertista&quot;</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&quot;60 - Gerente de Venta&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>