force-app/main/default/objects/Quote/fields/OVDocEntry__c.field-meta.xml
<CustomField>
    <fullName>OVDocEntry__c</fullName>
    <inlineHelpText>N° Orden de Venta</inlineHelpText>
    <label>OVDocEntry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>