force-app/main/default/objects/Quote/fields/OVDocNum__c.field-meta.xml
<CustomField>
    <fullName>OVDocNum__c</fullName>
    <label>OVDocNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>