force-app/main/default/objects/Quote/fields/Propiedades__c.field-meta.xml
<CustomField>
    <fullName>Propiedades__c</fullName>
    <formula>IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup1&quot;), &quot;SERVICIO BASICO,&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup2&quot;), &quot;ORDEN DE COMPA (801),&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup3&quot;), &quot;QBLI (ITEM ORDEN DE COMPRA),&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup4&quot;), &quot;HES (HOJA DE ENTRADA DE SERVICIO),&quot;, null) +

IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup5&quot;), &quot;NÚMERO DE RECEPCIÓN (802),&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup6&quot;), &quot;CLIENTE CON ESTADO DE PAGO,&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup7&quot;), &quot;SOLO PARA FALABELLA (EN CAMPO 52 NÚMERO DE HES),&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup8&quot;), &quot;NUMERO DE PROVEEDOR (NFP),&quot;, null) +

IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup9&quot;), &quot;NOMBRE COMPRADOR (AGREGAR EN EL CAMPO COMENTARIO),&quot;, null) +
IF(INCLUDES(Cliente__r.Propiedades__c, &quot;QryGroup10&quot;), &quot;NUMERO DE MATERIAL&quot;, null)</formula>
    <label>Propiedades</label>
    <type>Text</type>
</CustomField>