force-app/main/default/objects/Quote/fields/QuoteDocEntry__c.field-meta.xml
<CustomField>
    <fullName>QuoteDocEntry__c</fullName>
    <inlineHelpText>N° Oferta de Venta</inlineHelpText>
    <label>QuoteDocEntry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>