force-app/main/default/objects/Quote/fields/RequiereHES__c.field-meta.xml
<CustomField>
    <fullName>RequiereHES__c</fullName>
    <description>FE Tipo documento base SII
U_EXX_FE_TDBSII</description>
    <label>Requiere HES</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta Normal</fullName>
            </value>
            <value>
                <fullName>HES</fullName>
            </value>
            <value>
                <fullName>802</fullName>
            </value>
            <value>
                <fullName>801</fullName>
                <isActive>false</isActive>
                <label>801</label>
            </value>
            <value>
                <fullName>LS</fullName>
                <isActive>false</isActive>
                <label>LS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>