force-app/main/default/objects/Quote/fields/TipoEntrega__c.field-meta.xml
<CustomField>
    <fullName>TipoEntrega__c</fullName>
    <label>Tipo de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrega en bodega lureye</fullName>
            </value>
            <value>
                <fullName>Entrega en dependencias de cliente sobre camión</fullName>
            </value>
            <value>
                <fullName>Entrega en dependencias de cliente bajo camión</fullName>
            </value>
            <value>
                <fullName>Para ser agregado en la plantilla de cotización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>