force-app/main/default/objects/Quote/fields/Total_IVA__c.field-meta.xml
<CustomField>
    <fullName>Total_IVA__c</fullName>
    <formula>1.19 * TotalPrecio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total + IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>