force-app/main/default/objects/Quote/fields/TotalPrecio__c.field-meta.xml
<CustomField>
    <fullName>TotalPrecio__c</fullName>
    <formula>if (Opportunity.Owner.CodigoUN__c = &quot;EM&quot;  &amp;&amp;  CantidadBOM__c &gt; 0, 
Subtotal * (1-DescuentoGlobal__c) * CantidadBOM__c, 
Subtotal * (1-DescuentoGlobal__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>