force-app/main/default/objects/Quote/fields/TotalPrecioLista__c.field-meta.xml
<CustomField>
    <fullName>TotalPrecioLista__c</fullName>
    <label>Total Precio Lista</label>
    <summarizedField>QuoteLineItem.paso_precio_lista__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>