force-app/main/default/objects/Quote/fields/URL_Anexo__c.field-meta.xml
<CustomField>
    <fullName>URL_Anexo__c</fullName>
    <inlineHelpText>Ruta de carpeta Google Drive (Se debe compartir con Autorizadores y Aprobadores).</inlineHelpText>
    <label>URL Anexo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>