force-app/main/default/objects/Quote/fields/Vencido__c.field-meta.xml
<CustomField>
    <fullName>Vencido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox que interviene en el flujo de cancelación de quotes</description>
    <label>Vencido</label>
    <type>Checkbox</type>
</CustomField>